[tool.poetry]
name = "user_anewer"
version = "0.1.0"
description = ""
authors = ["Victor <nilafe4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.2"
loguru = "^0.6.0"
environs = "^9.5.0"
motor = {extras = ["srv"], version = "^2.5.1"}
pytest = "^7.0.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
